Fix overflow, again

--- a/static/styles.css
+++ b/static/styles.css
@@ -195,7 +195,7 @@ div.profile {
 }
 
 div.post {
-    word-wrap: anywhere;
+    overflow-wrap: break-word;
     display: table-cell;
     width: 100%;
     padding: 10px;
